# IINS-Lazy

./: Cargo.toml
src/: lib.rs  main.rs
src/contract/: lexer.rs  parser.rs
src/term/: as_net.rs  mod.rs  syntax.rs
