[package]
name = "interaction-calculus"
version = "0.2.7"
description = "A parallel model of computation."
license = "MIT"
authors = ["Victor Maia <victor.taelin@gmail.com>"]
repository = "https://github.com/victortaelin/interaction-calculus"

[lib]
name = "kic"
path = "src/lib.rs"

[dependencies]
clap = "2.26.0"
# im = "15.1.0"
itertools = "0.10.5"
chumsky = "1.0.0-alpha.4"
justerror = "0.1"
logos = "0.13.0"
thiserror = "1.0.40"

[[bin]]
name = "kic"
path = "src/main.rs"
